@@ -1,4 +1,6 @@
 Version 5.3.0.22
+Changed a thread's initial prompt to use the default handler
+ (instead of accepting and ignoring abort arguments)
 ffi/unsafe: added cpointer-gcable?
 racket/class: added dynamic-get-field and dynamic-set-field!
 
